syntax = "proto2";

import "pyatv/mrp/protobuf/ProtocolMessage.proto";

extend ProtocolMessage {
  optional SetStateMessage setStateMessage = 9;
}

message SetStateMessage {

  message NowPlayingInfoMessage {
    optional string album = 1;
    optional string artist = 2;
    optional double duration = 3;
    optional double elapsedTime = 4;
    optional float playbackRate = 5;
    optional int32 repeatMode = 6;
    optional int32 shuffleMode = 7;
    optional double timestamp = 8;
    optional string title = 9;
    optional uint64 uniqueIdentifier = 10;
    optional bool isExplicitTrack = 11;
    optional bool isMusicApp = 12;
    optional int64 radioStationIdentifier = 13;
    optional string radioStationHash = 14;
    optional string radioStationName = 15;
    optional bytes artworkDataDigest = 16;
    optional bool isAlwaysLive = 17;
    optional bool isAdvertisement = 18;
  }

  enum SupportedCommand {
    Play = 1;
    Pause = 2;
    TogglePlayPause = 3;
    EnableLanguageOption = 53;
    DisableLanguageOption = 54;
    Stop = 4;
    SkipForward = 18;
    SkipBackward = 19;
    BeginFastForward = 9;
    BeginRewind = 11;
    ChangePlaybackRate = 20;
    SeekToPlaybackPosition = 45;
    NextInContext = 34;
    PreviousInContext = 35;
    RemoveFromPlaybackQueue = 56;
    ReorderPlaybackQueue = 55;
    PlayItemInPlaybackQueue = 57;
  }

  enum PlaybackState {
    Playing = 1;
    Paused = 2;
  }

  message SupportedCommandMessage {
    required SupportedCommand command = 1;
    required bool enabled = 2;
    optional bool canScrub = 16;
    // optional ??? preferredInterval = ???;
    // optional ??? supportedRate = ???;
  }

  message SupportedCommands {
    repeated SupportedCommandMessage supportedCommand = 1;
  }

  optional NowPlayingInfoMessage nowPlayingInfo= 1;
  optional SupportedCommands supportedCommands = 2;
  optional string displayID = 4;
  optional string displayName = 5;
  optional PlaybackState playbackState = 6;
}
